CSS: More fixes for directory entry body wrapping:
- Commit a2081064 also broke the instructor bios under events.
- We want to be more specific and only clear floats on full view mode.

--- a/web/themes/custom/breema2/css/styles.css
+++ b/web/themes/custom/breema2/css/styles.css
@@ -1072,12 +1072,12 @@ ol.location-results .field--name-field-upcoming-events > .field__item {
   padding-top: 2em;
 }
 
-.node--type-directory-entry .field--name-body {
+.node--type-directory-entry.node--view-mode-full .field--name-body {
   clear: both;
   padding: 1em 0 0 0;
 }
 
-.node--type-directory-entry .node--type-article .field--name-body {
+.node--type-directory-entry.node--view-mode-full .node--type-article .field--name-body {
   clear: none;
   padding: 0;
 }
